add and removed files

--- a/python-app/Jenkinsfile
+++ b/python-app/Jenkinsfile
@@ -29,7 +29,8 @@ pipeline{
             }
         }
         stage("Code Deploy"){
-            stage{
+            steps{
+		echo "comming soon!!"
 
             }
         }
