--- a/python-app/Jenkinsfile
+++ b/python-app/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline{
         }
         stage("Build & Test"){
             steps {
-                sh 'python -m unittest test_hello_world.py'
+                sh 'python -m unittest test-app.py'
             }
         }
 
