--- a/python-app/Jenkinsfile
+++ b/python-app/Jenkinsfile
@@ -1,6 +1,7 @@
 pipeline{
-    agent any
-
+    agent {
+	    docker{image 'python:3.13.0b1-slim-bookworm' }
+    }
     stages{
         stage("Git Checkout"){
             steps{
@@ -11,9 +12,9 @@ pipeline{
         }
         stage("Build & Test"){
             steps {
-                sh '''	sudo apt update
-			sudo apt install python3
-			python -m unittest test-app.py'''
+   //              sh '''	sudo apt update
+			// sudo apt install python3
+			python -m unittest test-app.py
             }
         }
 
